--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-scroll": "^2.4.1",
     "core-js": "^3.6.5",
     "fastclick": "^1.0.6",
+    "vant": "^2.12.26",
     "vue": "^2.6.11",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.2",
